[gd_scene load_steps=8 format=2]

[ext_resource path="res://TutorialScene.gd" type="Script" id=2]
[ext_resource path="res://Non_selected.tres" type="StyleBox" id=3]
[ext_resource path="res://Selected_butt_on_theme.tres" type="StyleBox" id=4]

[sub_resource type="StreamTexture" id=4]
flags = 4
load_path = "res://.import/Ảnh-nền-10.1.png-0e424fdcbfd3937f0b18872383d1c0d1.stex"

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[node name="TutorialScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 441, 302 )
scale = Vector2( 1.5, 1.5 )
texture = SubResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 44.0
margin_right = 296.0
margin_bottom = 211.0
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Press Space key to start game 
Press direction key to move the character. 
To get a point, you need to touch to candy in 
the map
When you get enough point, you win the map
When you win 3 maps, you win the game
Becarful, if you touch to the ghost, you lose
Some candies have special effect, you will 
surprise.
Good luck and win.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 123.0
margin_top = 217.0
margin_right = 311.0
margin_bottom = 237.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BacktoOption" type="Button" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 14.0
custom_colors/font_color_disabled = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_focus = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.929412, 0.890196, 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 3 )
text = "Back to Option"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
anims/Fade = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="pressed" from="VBoxContainer/BacktoOption" to="." method="_on_BacktoOption_pressed"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
